Fixed URL error.

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,7 +15,7 @@
       <h2 class="subtitle">
         Easily post "cards" to a website. Built using Express.js, Handlebars, and Bulma for styling.
       </h2>
-      <p> Make a card here: <button onclick="location.href='http://localhost:1337/add'">
+      <p> Make a card here: <button onclick="location.href='http://cfinefield.me:1337/add'">
      Add Card</button></p>
     </div>
   </div>
